--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,12 @@ url: "https://daniellewis.dev" # the base hostname & protocol for your site, e.g
 twitter_username: djjlewis
 github_username:  djjlewis
 
+collections:
+  conference-talks:
+    output: true
+  guides:
+    output: true
+
 # Build settings
 markdown: kramdown
 theme: minima
